--- a/.htaccess
+++ b/.htaccess
@@ -3,6 +3,7 @@ IndexIgnore */*
 # Turn on the RewriteEngine
 RewriteEngine On
 #  Rules
+RewriteRule ^assets/ - [L]
+RewriteRule . index.php
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . index.php
